--- a/Flowers-Shop/src/main/resources/application.properties
+++ b/Flowers-Shop/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 spring.application.name=Flowers-Shop
+#Data Source Properties
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/flowers_shop?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=1111
+
+#JPA Properties
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql = TRUE
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.open-in-view=false
+spring.jpa.defer-datasource-initialization=true
+
+#SQL
+spring.sql.init.mode=never
+
+#Enable Virtual Threads
+spring.threads.virtual.enabled=true
+
+###Logging Levels
+# Disable the default loggers
+logging.level.org = WARN
+logging.level.blog = WARN
+
+#Show SQL executed with parameter bindings
+logging.level.org.hibernate.SQL = off
+logging.level.org.hibernate.type.descriptor = TRACE
+
+#Change server port
+#server.port=8000
+
