--- a/Flowers-Shop/src/main/resources/application.properties
+++ b/Flowers-Shop/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=never
 
 #Enable Virtual Threads
-#spring.threads.virtual.enabled=true
+spring.threads.virtual.enabled=true
 
 ###Logging Levels
 # Disable the default loggers
