--- a/Flowers-Shop/src/main/resources/application.properties
+++ b/Flowers-Shop/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Flowers-Shop
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/flowers_shop?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 #JPA Properties
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
