--- a/Orders Flower Shop/orders/src/main/resources/application.properties
+++ b/Orders Flower Shop/orders/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=Flowers-Shop
+spring.application.name=orders
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/flowers_shop?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/flowers_shop_orders?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
@@ -11,8 +11,6 @@ spring.jpa.properties.hibernate.format_sql = TRUE
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
-
-#spring.mvc.hiddenmethod.filter.enabled=true
 
 #SQL
 spring.sql.init.mode=never
@@ -30,5 +28,4 @@ logging.level.org.hibernate.SQL = off
 logging.level.org.hibernate.type.descriptor = TRACE
 
 #Change server port
-#server.port=8000
-
+server.port=8888
