--- a/Flowers-Shop/src/main/resources/application.properties
+++ b/Flowers-Shop/src/main/resources/application.properties
@@ -32,3 +32,4 @@ logging.level.org.hibernate.type.descriptor = TRACE
 #Change server port
 #server.port=8000
 
+order.api.baseUrl=http://localhost:8888
