--- a/Flowers-Shop/src/main/resources/application.properties
+++ b/Flowers-Shop/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
 
-#spring.mvc.hiddenmethod.filter.enabled=true
+spring.mvc.hiddenmethod.filter.enabled=true
 
 #SQL
 spring.sql.init.mode=never
