--- a/Flowers-Shop/src/main/resources/application.properties
+++ b/Flowers-Shop/src/main/resources/application.properties
@@ -33,3 +33,12 @@ logging.level.org.hibernate.type.descriptor = TRACE
 #server.port=8000
 
 order.api.baseUrl=http://localhost:8888
+
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:./src/main/resources/templates/
+
+
+
+
+
